finish css in listItem

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -2,9 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-  <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1955826_7lrivmrs93y.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+  <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1955826_6hh05ek4sl3.css">
   <title>Samuel活动平台</title>
+  <script>
+    if ('addEventListener' in document) {
+      document.addEventListener('DOMContentLoaded', function() {
+        FastClick.attach(document.body);
+      }, false);
+    }
+    if(!window.Promise) {
+      document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
+    }
+  </script>
 </head>
 <body>
   <div id="root"></div>
