--- a/src/pages/detail.less
+++ b/src/pages/detail.less
@@ -1,3 +1,7 @@
+.wraper {
+  background-color: #faf9fc;
+}
+
 .commonInfo {
   margin: 10px 15px;
   .channelName {
@@ -41,5 +45,17 @@
         color: #bababa;
       }
     }
+  }
+}
+
+.tabBar {
+  display: flex;
+  margin: 20px 0px;
+  padding: 10px 0;
+  border-top: 1px #e8e8e8 solid;
+  border-bottom: 1px #e8e8e8 solid;
+  a {
+    flex: 1;
+    text-align: center;
   }
 }
