--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <script src="https://as.alipayobjects.com/g/component/fastclick/1.0.6/fastclick.js"></script>
-  <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1955826_vwnbxf7uz2.css">
+  <link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_1955826_t2rnc61xlw8.css">
   <title>Samuel活动平台</title>
   <script>
     if ('addEventListener' in document) {
@@ -15,6 +15,15 @@
     if(!window.Promise) {
       document.writeln('<script src="https://as.alipayobjects.com/g/component/es6-promise/3.2.2/es6-promise.min.js"'+'>'+'<'+'/'+'script>');
     }
+
+    // window.addEventListener('resize', () => {     
+    //   if (document.activeElement.tagName == 'INPUT') {         
+    //       //延迟出现是因为有些 Android 手机键盘出现的比较慢
+    //        window.setTimeout(() => {             
+    //           document.activeElement.scrollIntoViewIfNeeded();
+    //        }, 100);
+    //    }
+    // });
   </script>
 </head>
 <body>
