--- a/src/pages/list/listItem.less
+++ b/src/pages/list/listItem.less
@@ -40,6 +40,7 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 1.4;
+    color: #453257;
   }
   .avtivityTime {
     height: 20px;
