--- a/src/pages/login.less
+++ b/src/pages/login.less
@@ -3,10 +3,12 @@
   margin: 0;
 }
 .login_main {
-  height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100%;
   background-image: url('../assets/login-b.jpg');
   background-repeat: no-repeat;
-  background-size: 100% 92%;
+  background-size: 100% 100%;
   -moz-background-size: 100% 100%;
   .mask {
     position: absolute;
@@ -15,7 +17,10 @@
     background-color: rgba(133, 96, 169, 0.7);
   }
   .content {
+    width: 100%;
+    height: 92vh;
     position: relative;
+    overflow: auto;
     h2,
     h3 {
       text-align: center;
@@ -43,7 +48,8 @@
     }
 
     .input {
-      margin-top: 120px;
+      position: relative;
+      margin-bottom: 30%;
       > div {
         width: 70%;
         margin: 15px auto;
