--- a/src/pages/detail.less
+++ b/src/pages/detail.less
@@ -3,7 +3,8 @@
 }
 
 .commonInfo {
-  margin: 10px 15px;
+  background-color: #fff;
+  padding: 20px 15px;
   .channelName {
     display: inline-block;
     height: 20px;
@@ -24,6 +25,7 @@
   }
   .user {
     height: 40px;
+    margin-bottom: 20px;
     .usericon {
       float: left;
       width: 15%;
@@ -50,12 +52,15 @@
 
 .tabBar {
   display: flex;
-  margin: 20px 0px;
+  width: 100%;
   padding: 10px 0;
+  background-color: #fff;
   border-top: 1px #e8e8e8 solid;
   border-bottom: 1px #e8e8e8 solid;
+  z-index: 999;
   a {
     flex: 1;
     text-align: center;
+    color: #8c8c8c;
   }
 }
