--- a/src/pages/header/header.less
+++ b/src/pages/header/header.less
@@ -1,4 +1,10 @@
 .Nav {
+  height: 45px;
+  width: 100%;
+  position: sticky;
+  top: 0px;
+  z-index: 999;
+  //margin-bottom: 45px;
   > div {
     background-color: #8560a9 !important; /*覆盖原组件的背景颜色*/
   }
