完成详情页面的滑动和tab联动

--- a/src/pages/detail.less
+++ b/src/pages/detail.less
@@ -1,5 +1,6 @@
 .wraper {
   background-color: #faf9fc;
+  margin-bottom: 45px;
 }
 
 .commonInfo {
@@ -58,9 +59,19 @@
   border-top: 1px #e8e8e8 solid;
   border-bottom: 1px #e8e8e8 solid;
   z-index: 999;
-  a {
+  span {
     flex: 1;
     text-align: center;
     color: #8c8c8c;
+    i {
+      padding-right: 7px;
+    }
+  }
+  .active {
+    color: #aecb4f;
+  }
+  span:nth-child(2) {
+    border-right: 1px #e8e8e8 solid;
+    border-left: 1px #e8e8e8 solid;
   }
 }
