--- a/src/pages/detailComponent/comments.less
+++ b/src/pages/detailComponent/comments.less
@@ -2,7 +2,7 @@
   margin: 20px;
   .list {
     display: flex;
-    margin-bottom: 15px;
+    padding-bottom: 25px;
     .usericon {
       width: 15%;
       img {
