--- a/src/pages/detailComponent/participants.less
+++ b/src/pages/detailComponent/participants.less
@@ -3,19 +3,19 @@
   display: flex;
   margin: 20px;
   .text {
-    width: 30%;
+    width: 25%;
     text-align: center;
     margin-top: 8px;
     color: #ac8ec9;
     font-size: 12px;
     i {
-      font-size: 6px;
+      font-size: 8px;
       margin-right: 5px;
     }
   }
   .usericon {
-    width: 70%;
-    img {
+    width: 75%;
+    .icon {
       height: 24px;
       width: 24px;
       border-radius: 50%;
