--- a/src/pages/detailComponent/comments.less
+++ b/src/pages/detailComponent/comments.less
@@ -31,6 +31,7 @@
         font-size: 14px;
         line-height: 1.3;
         color: #67616d;
+        word-break: break-all;
       }
     }
     .reply {
