--- a/src/pages/profile.less
+++ b/src/pages/profile.less
@@ -2,12 +2,15 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: #fafafa;
   .top {
     padding: 30px 0px;
     border-bottom: 1px #e8e8e8 solid;
     height: 220px;
+    background-color: #fff;
     .userpic {
       text-align: center;
+      margin-top: 50px;
       img {
         width: 72px;
         height: 72px;
